--- a/FAQ/css/main.scss
+++ b/FAQ/css/main.scss
@@ -13,6 +13,58 @@ body {
 .container {
    max-width: 600px;
    margin: 0 auto;
+
+   .faq.active {
+      background: #fff;
+
+      .faq-text {
+         opacity: 1;
+         margin-top: 30px;
+         transform: translateY(00px);
+         transition: transform .3s linear;
+      }
+      .faq-toggle {
+         .fa-angle-down {
+            display: none;
+         }
+         .fa-times-circle {
+            display: block;
+         }
+      }
+   }
+
+   .faq {
+      background: transparent;
+      border-radius: 5px;
+      border: 1px solid #9fa4a8;
+      margin: 20px 0;
+      padding: 30px;
+      position: relative;
+      overflow: hidden;
+      transition: .3s ease;
+
+      .faq-title {
+         margin-right: 30px;
+      }
+      .faq-toggle {
+         position: absolute;
+         right: 30px; top: 30px;
+         height: 30px; width: 30px;
+         background: transparent;
+         border: 0;
+         font-size: 16px;
+         cursor: pointer;
+
+         .fa-times-circle {
+            display: none;
+         }
+      }
+      .faq-text {
+         opacity: 0;
+         transform: translateY(-20px);
+         transition: transform .3s linear;
+      }
+   }
 }
 .title {
 
